<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/ungu"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@color/ic_launcher_background"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Nama" />

        <TextView
            android:id="@+id/tv_jk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Jenis_Kelamin" />

        <TextView
            android:id="@+id/tv_umur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Umur" />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Alamat" />

        <TextView
            android:id="@+id/tv_jeniskulit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Jenis_Kulit" />

        <TextView
            android:id="@+id/tv_persentase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:text="@string/Persentase" />
        <TextView
            android:id="@+id/tv_Solusi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Solusi " />


    </LinearLayout>

</androidx.cardview.widget.CardView>